# fused-triton-rmsnorm-residual-qkv

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: _postprocess_mfu.py  benchmark_forward.py  e2e_decode.py  harness.py  mbu_analysis.py  torch_compile_baseline.py
benchmarks/results/: baseline.csv  decode.csv  e2e_decode.csv  e2e_decode_torch_compile.csv
docs/: week3_profiling.md  week4_e2e.md
integration/: __init__.py  llama3_patch.py
scripts/: profile_ncu.sh
scripts/ncu/: ncu_report_20260415_205425.csv  ncu_report_20260415_205425.ncu-rep  ncu_report_20260415_205425.txt
src/fused_triton_rmsnorm_residual_qkv/: __init__.py  ops.py
src/triton_fused_rmsnorm_qkv/: __init__.py  baseline.py  kernel.py
tests/: test_correctness.py  test_reference.py
