[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fused-triton-rmsnorm-residual-qkv"
version = "0.1.0"
description = "Triton-backed residual RMSNorm with packed QKV projection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
