[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-fused-rmsnorm-qkv"
version = "0.1.0"
description = "Fused RMSNorm + residual + QKV projection Triton kernel with rigorous benchmarks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "triton>=3.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
